--- a/index.html
+++ b/index.html
@@ -60,19 +60,24 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section"> <!-- light-background -->
 
-      <img src="assets/img/hero-bg.png" alt="">
+      <!-- <img src="assets/img/hero-bg.png" alt=""> -->
+      <picture>
+        <source media="(min-width: 1200px)" srcset="assets/img/hero-bg.png">
+        <source media="(max-width: 1199px)" srcset="assets/img/bg_wo_texts.png">
+        <img src="assets/img/hero-bg.png" alt="Hero Image">
+      </picture>
 
-      <div class="container" data-aos="zoom-out">
+      <div class="container mobile-only" data-aos="zoom-out">
         <div class="row justify-content-center">
           <div class="col-lg-9">
-            <h2>Brandon Johnson</h2>
-            <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
-            <div class="social-links">
+            <h2>UX DESIGNER</h2>
+            <p><span class="typed" data-typed-items="Muhsen Delamore">Muhsen Delamore</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <!-- <div class="social-links">
               <a href="#"><i class="bi bi-twitter-x"></i></a>
               <a href="#"><i class="bi bi-facebook"></i></a>
               <a href="#"><i class="bi bi-instagram"></i></a>
               <a href="#"><i class="bi bi-linkedin"></i></a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
