Disabled the link to HealthHub.
As HealthHub page is still in progress but I want to update my portfolio.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <nav id="navmenu" class="navmenu">
       <ul>
         <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i><span>Home</span></a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
+        <li><a href="#about"><i class="bi bi-person navicon"></i><span>Hello</span></a></li>
         <!-- <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i><span>Portfolio</span></a></li> -->
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i><span>Projects</span></a></li>
@@ -136,7 +136,7 @@
               </div>
 
               <div class="col-lg-6">
-                <h2><img src="assets/img/logos/process.png" style="width: 28px; height: auto;"> &nbsp;Processes</h2>
+                <h2><img src="assets/img/logos/process.png" style="width: 28px; height: auto;"> &nbsp;Hard Skills</h2>
                 <div style="margin-left:36px">
                   <ul>
                     <li><i class="bi bi-dot"></i><span>UX Research & Analysis</span></li>
@@ -173,10 +173,10 @@
             <div class="service-item item-cyan position-relative">
               <img src="assets/img/healthhub/healthhub_start.png">
               
-              <a href="HealthHub.html" class="stretched-link">
+              <a href="" class="stretched-link">
                 <h3>HealthHub</h3>
               </a>
-              <p>There is my capstone project for the 4-month UX Design bootcamp I recently attended in NTU.</p>
+              <p>There is my capstone project for the 4-month UX Design bootcamp I'd recently completed at NTU.</p>
             </div>
           </div>
 
