Added portfolio button, changed title and icon.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - MyResume Bootstrap Template</title>
+  <title>UX Design - Muhsen Delamore</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/majesticons_ux-circle-line.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -203,6 +203,15 @@
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
       <h3 class="sitename">Muhsen Delamore</h3>
+      <div class="col-md-12 text-center" style="padding-bottom: 24px;">
+        <a href="https://m-delamore.github.io/portfolio/" target="_blank">
+          <button type="button" class="btn-with-icon">
+            <img src="assets/img/portfolio_icon.png" style="width: 36px; height: auto; vertical-align: middle;" alt="Portoflio Website" />
+            My Portfolio Website
+          </button>
+        </a>
+      </div>
+      
       <p>Thank you in advance for giving me the opportunity to embark onto a new career path.</p>
       
       <div class="container">
