HealthHub is almost complete. Linked in Home page. Added security to images.

--- a/HealthHub.html
+++ b/HealthHub.html
@@ -58,7 +58,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="cta-btn" href="#about">Back To UX Home</a>
+      <a class="cta-btn" href="index.html">Back To UX Home</a>
 
     </div>
   </header>
@@ -66,7 +66,7 @@
   <main class="main">
 
     <div class="container px-0">
-      <div class="row g-0"> <!-- Bootstrap row with no gaps -->
+      <div class="row g-0 security"> <!-- Bootstrap row with no gaps -->
         <div id="start" class="col-12"> <!-- Full-width column -->
           <img src="assets/img/healthhub/01_Start.png" class="img-fluid" data-aos="fade-in">
         </div>
@@ -75,6 +75,57 @@
         </div>
         <div class="col-12"> <!-- Full-width column -->
           <img src="assets/img/healthhub/03_2Phases.png" class="img-fluid" data-aos="fade-in">
+        </div>
+        <div id="research" class="col-12"> <!-- Full-width column -->
+          <img src="assets/img/healthhub/04_Research.png" class="img-fluid" data-aos="fade-in">
+        </div>
+        <div class="col-12"> <!-- Full-width column -->
+          <img src="assets/img/healthhub/05_Findings.png" class="img-fluid" data-aos="fade-in">
+        </div>
+        <div class="col-12"> <!-- Full-width column -->
+          <img src="assets/img/healthhub/06_Quotes.png" class="img-fluid" data-aos="fade-in">
+        </div>
+        <div id="problem" class="col-12"> <!-- Full-width column -->
+          <img src="assets/img/healthhub/07_ProblemStatement.png" class="img-fluid" data-aos="fade-in">
+        </div>
+        <div class="col-12"> <!-- Full-width column -->
+          <img src="assets/img/healthhub/08_Persona.png" class="img-fluid" data-aos="fade-in">
+        </div>
+        <div class="col-12"> <!-- Full-width column -->
+          <img src="assets/img/healthhub/09_CJM.png" class="img-fluid" data-aos="fade-in">
+        </div>
+        <div id="solutions" class="col-12"> <!-- Full-width column -->
+          <img src="assets/img/healthhub/10_Ideas.png" class="img-fluid" data-aos="fade-in">
+        </div>
+        <div class="col-12"> <!-- Full-width column -->
+          <img src="assets/img/healthhub/11_UserFlow.png" class="img-fluid" data-aos="fade-in">
+        </div>
+        <div class="col-12"> <!-- Full-width column -->
+          <img src="assets/img/healthhub/12_Wireflow.png" class="img-fluid" data-aos="fade-in">
+        </div>
+        <div id="test" class="col-12"> <!-- Full-width column -->
+          <img src="assets/img/healthhub/13_UsabilityTest.png" class="img-fluid" data-aos="fade-in">
+        </div>
+        <div class="col-12"> <!-- Full-width column -->
+          <img src="assets/img/healthhub/14_WhatsNew.png" class="img-fluid" data-aos="fade-in">
+        </div>
+        <div id="prototype" class="col-12"> <!-- Full-width column -->
+          <img src="assets/img/healthhub/15_Prototype.png" class="img-fluid" data-aos="fade-in">
+        </div>
+        <div class="col-12"> <!-- Full-width column -->
+          <img src="assets/img/healthhub/16_MsRani.png" class="img-fluid" data-aos="fade-in">
+        </div>
+        <div class="col-12"> <!-- Full-width column -->
+          <img src="assets/img/healthhub/17_WhatsNext.png" class="img-fluid" data-aos="fade-in">
+        </div>
+        <div id="reflections" class="col-12"> <!-- Full-width column -->
+          <img src="assets/img/healthhub/18_Reflections.png" class="img-fluid" data-aos="fade-in">
+          <div>
+            <a href="https://www.figma.com/deck/GOCam3TkP2qHEh6QgP68QL/Capstone-Presentation-FInal?node-id=1-4662&t=eGo6nSphWoGISc1o-1">Empowering Caregivers</a>
+          </div>
+        </div>
+        <div class="col-12"> <!-- Full-width column -->
+          <img src="assets/img/healthhub/19_ThankYou.png" class="img-fluid" data-aos="fade-in">
         </div>
       </div>
     </div>
@@ -118,6 +169,12 @@
 
   <!-- Main JS File -->
   <script src="assets/js/healthhub.js"></script>
+
+  <script>
+    document.addEventListener("contextmenu", function (event) {
+      event.preventDefault();
+    });
+  </script>
 
 </body>
 
