--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <div class="service-item item-cyan position-relative">
               <img src="assets/img/healthhub/healthhub_start.png">
               
-              <a href="https://www.figma.com/deck/GOCam3TkP2qHEh6QgP68QL/Capstone-Presentation-FInal?node-id=1-4662&t=eGo6nSphWoGISc1o-1" class="stretched-link">
+              <a href="HealthHub.html" class="stretched-link">
                 <h3>HealthHub</h3>
               </a>
               <p>There is my capstone project for the 4-month UX Design bootcamp I'd recently completed at NTU.</p>
