Prototype embedded with proper styles.

--- a/HealthHub.html
+++ b/HealthHub.html
@@ -15,7 +15,8 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -110,7 +111,21 @@
           <img src="assets/img/healthhub/14_WhatsNew.png" class="img-fluid" data-aos="fade-in">
         </div>
         <div id="prototype" class="col-12"> <!-- Full-width column -->
-          <img src="assets/img/healthhub/15_Prototype.png" class="img-fluid" data-aos="fade-in">
+          <!-- <img src="assets/img/healthhub/15_Prototype.png" class="img-fluid" data-aos="fade-in"> -->
+          <div class="row">
+            <div class="col-12 col-md-6 prototype-text">
+              <h1>The Prototype</h1>
+                <h3>Try this:</h3>
+                <ol>
+                  <li>Book an appointment at a polyclinic (only the first group is available for selection).</li>
+                  <li>In the Home screen, use the More Info [ i ] button to reschedule an appointment.</li>
+                  <li>Export appointments to a calendar app from both the Home screen and Appointments screen.</li>
+                </ol>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 prototype-space">
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="100%" src="https://embed.figma.com/proto/x3gVdZNjvwEE7RAg6IJPMK/HealthHub-Prototype-Muhsen?page-id=0%3A1&node-id=1-10268&p=f&viewport=922%2C355%2C0.09&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A10268&embed-host=share" allowfullscreen></iframe>
+          </div>
         </div>
         <div class="col-12"> <!-- Full-width column -->
           <img src="assets/img/healthhub/16_MsRani.png" class="img-fluid" data-aos="fade-in">
@@ -170,11 +185,11 @@
   <!-- Main JS File -->
   <script src="assets/js/healthhub.js"></script>
 
-  <script>
+  <!-- <script>
     document.addEventListener("contextmenu", function (event) {
       event.preventDefault();
     });
-  </script>
+  </script> -->
 
 </body>
 
