Forgot to enable script.

--- a/HealthHub.html
+++ b/HealthHub.html
@@ -185,11 +185,11 @@
   <!-- Main JS File -->
   <script src="assets/js/healthhub.js"></script>
 
-  <!-- <script>
+  <script>
     document.addEventListener("contextmenu", function (event) {
       event.preventDefault();
     });
-  </script> -->
+  </script>
 
 </body>
 
